--- a/hwk/hwk7/hwk7.Rmd
+++ b/hwk/hwk7/hwk7.Rmd
@@ -7,10 +7,14 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
 library(gridExtra)
 set.seed(12345)
+x <- runif(n = 1000, min = 0, max = 3*pi/2)
+e <- rnorm(n = 1000, mean = 0, sd = 0.1)
+y <- sin(x + 0.1) + e
+df <- data.frame(x, e, y)
 ```
 
 # Linear Spline
@@ -20,63 +24,133 @@ set.seed(12345)
 
 ```{r}
 
-storage <- list("0" = NULL)
+x <- runif(n = 1000, min = 0, max = 3*pi/2)
+e <- rnorm(n = 1000, mean = 0, sd = 0.1)
+y <- sin(x + 0.1) + e
+df <- data.frame(x, e, y)
+
+prediction_storage <- list("0" = NULL)
+knot_storage <- list("0" = NULL)
 
 for(num_knots in c(5, 10, 20, 30)){
-  for(l in c(0, 10, 15, 20, 50, 1000)){
-    
-    # generate data
-    x <- runif(n = 1000, min = 0, max = 3*pi/2)
-    e <- rnorm(n = 1000, mean = 0, sd = 0.1)
-    y <- sin(x + 0.1) + e
-    df <- data.frame(x, e, y)
-    
-    # get knot locations
-    K <- num_knots
-    k <- 1:K
-    knots <- quantile(x, probs = (k+1)/(K+2))
-    
-    # make linear spline matrix
-    X <- cbind(1, x)
-    for(i in k){
-      X <- cbind(X, (x - knots[i]) * as.numeric(x > knots[i]))
+    for(l in c(0, 10, 15, 20, 50, 1000)){
+        
+        # get knot locations
+        K <- num_knots
+        k <- 1:K
+        knots <- quantile(x, probs = (k+1)/(K+2))
+        
+        # make linear spline matrix
+        X <- cbind(1, x)
+        for(i in k){
+            X <- cbind(X, (x - knots[i]) * as.numeric(x > knots[i]))
+        }
+        
+        # make D
+        D <- diag(c(0, 0, rep(1, K)))
+        
+        # set smoothing parameter
+        lambda <- l
+        
+        # get beta hat
+        beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
+        
+        # get estimates
+        y_hat <- X %*% beta_hat
+        
+        
+        prediction_storage[[as.character(num_knots)]][[as.character(l)]] <- y_hat
+        
     }
-    
-    # make D
-    D <- diag(c(0, 0, rep(1, K)))
-    
-    # set smoothing parameter
-    lambda <- l
-    
-    # get beta hat
-    beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
-    
-    # get estimates
-    y_hat <- X %*% beta_hat
-    df$y_hat <- y_hat
-    
-    # plot
-    p <- ggplot(data = df) +
-      geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
-      geom_vline(xintercept = knots, alpha = 0.3) +
-      stat_function(mapping = aes(color = "Truth"), 
-                    fun = function(x) {sin(x + 0.1)}, lwd = 1) +
-      geom_line(mapping = aes(x = x, y = y_hat, color = "Spline")) +
-      scale_color_manual(name = "Fitted", values = c("red", "blue")) +
-      ggtitle(paste0("Linear spline with ", K,
-                     " knots \nand smoothing parameter ", lambda))
-    
-    storage[[as.character(num_knots)]][[as.character(l)]] <- p
-    
-  }
+    knot_storage[[as.character(num_knots)]] <- knots
 }
 
-# arrange plots
-for(i in c(5, 10, 20, 30)){
-  do.call("grid.arrange", c(storage[[as.character(i)]], ncol = 2))
+my_unpack <- function(my_list, which_k){
+    
+    my_list <- my_list[[which_k]]
+    pckg <- my_list[[1]]
+    for(i in 2:length(my_list)){
+        tmp <- my_list[[i]]
+        pckg <- cbind(pckg, tmp)
+    }
+    return(pckg)
 }
 
 ```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 2)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[2]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 5 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 3)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[3]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 10 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 4)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[4]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 20 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 5)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[5]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 30 Knots And Various Lambda")
+
+```
+
+
 
 # Quadratic Spline
 
@@ -85,60 +159,128 @@ for(i in c(5, 10, 20, 30)){
 
 ```{r}
 
-storage <- list("0" = NULL)
+x <- runif(n = 1000, min = 0, max = 3*pi/2)
+e <- rnorm(n = 1000, mean = 0, sd = 0.1)
+y <- sin(x + 0.1) + e
+df <- data.frame(x, e, y)
+
+prediction_storage <- list("0" = NULL)
+knot_storage <- list("0" = NULL)
 
 for(num_knots in c(5, 10, 20, 30)){
-  for(l in c(0, 10, 15, 20, 50, 1000)){
-    
-    # generate data
-    x <- runif(n = 1000, min = 0, max = 3*pi/2)
-    e <- rnorm(n = 1000, mean = 0, sd = 0.1)
-    y <- sin(x + 0.1) + e
-    df <- data.frame(x, e, y)
-    
-    # get knot locations
-    K <- num_knots
-    k <- 1:K
-    knots <- quantile(x, probs = (k+1)/(K+2))
-    
-    # make linear spline matrix
-    X <- cbind(1, x)
-    for(i in k){
-      X <- cbind(X, (x - knots[i])^2 * as.numeric(x > knots[i]))
+    for(l in c(0, 10, 15, 20, 50, 1000)){
+        
+        # get knot locations
+        K <- num_knots
+        k <- 1:K
+        knots <- quantile(x, probs = (k+1)/(K+2))
+        
+        # make linear spline matrix
+        X <- cbind(1, x)
+        for(i in k){
+            X <- cbind(X, (x - knots[i])^2 * as.numeric(x > knots[i]))
+        }
+        
+        # make D
+        D <- diag(c(0, 0, rep(1, K)))
+        
+        # set smoothing parameter
+        lambda <- l
+        
+        # get beta hat
+        beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
+        
+        # get estimates
+        y_hat <- X %*% beta_hat
+        
+        
+        prediction_storage[[as.character(num_knots)]][[as.character(l)]] <- y_hat
+        
     }
-    
-    # make D
-    D <- diag(c(0, 0, rep(1, K)))
-    
-    # set smoothing parameter
-    lambda <- l
-    
-    # get beta hat
-    beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
-    
-    # get estimates
-    y_hat <- X %*% beta_hat
-    df$y_hat <- y_hat
-    
-    # plot
-    p <- ggplot(data = df) +
-      geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
-      geom_vline(xintercept = knots, alpha = 0.3) +
-      stat_function(mapping = aes(color = "Truth"), 
-                    fun = function(x) {sin(x + 0.1)}, lwd = 1) +
-      geom_line(mapping = aes(x = x, y = y_hat, color = "Spline")) +
-      scale_color_manual(name = "Fitted", values = c("red", "blue")) +
-      ggtitle(paste0("Quadratic spline with ", K,
-                     " knots \nand smoothing parameter ", lambda))
-    
-    storage[[as.character(num_knots)]][[as.character(l)]] <- p
-    
-  }
+    knot_storage[[as.character(num_knots)]] <- knots
 }
 
-# arrange plots
-for(i in c(5, 10, 20, 30)){
-  do.call("grid.arrange", c(storage[[as.character(i)]], ncol = 2))
+my_unpack <- function(my_list, which_k){
+    
+    my_list <- my_list[[which_k]]
+    pckg <- my_list[[1]]
+    for(i in 2:length(my_list)){
+        tmp <- my_list[[i]]
+        pckg <- cbind(pckg, tmp)
+    }
+    return(pckg)
 }
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 2)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[2]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 5 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 3)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[3]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 10 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 4)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[4]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 20 Knots And Various Lambda")
+
+```
+
+```{r}
+
+test_preds <- my_unpack(prediction_storage, 5)
+ggplot(data = df) +
+    geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+    geom_vline(xintercept = knot_storage[[5]], alpha = 0.3) +
+    stat_function(fun = function(x) {sin(x + 0.1)}, lwd = 1, color = "red") +
+    geom_line(mapping = aes(x = x, y = test_preds[, 1], color = "0")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 2], color = "10")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 3], color = "15")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 4], color = "20")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 5], color = "50")) +
+    geom_line(mapping = aes(x = x, y = test_preds[, 6], color = "1000")) +
+    scale_color_discrete("Lambda") +
+    ggtitle("Linear spline with 30 Knots And Various Lambda")
 
 ```
